--- a/index.html
+++ b/index.html
@@ -17,22 +17,23 @@
     function R2leg(x, y) {
       ctx.beginPath();
       ctx.lineWidth = "6";
-      ctx.rect(x, y, x + 30, y + 100);
-      ctx.rect(x + 10, y + 150, x + 10, y + 200);
-      ctx.rect(x, y + 400, x + 30, y + 30);
+      ctx.rect(x, y, 80, 100);
+      ctx.rect(x + 10, y + 100, 60, 200);
+      ctx.rect(x, y + 300, 80, 60);
       ctx.stroke();
 
       ctx.beginPath();
       ctx.lineWidth = "6";
-      ctx.moveTo(x + 10, y + 480);
-      ctx.lineTo(x + 70, y + 480);
-      ctx.lineTo(x + 90, y + 550);
-      ctx.lineTo(x - 10, y + 550);
+      ctx.moveTo(x + 10, 410);
+      ctx.lineTo(x + 70, 410);
+      ctx.lineTo(x + 90, 480);
+      ctx.lineTo(x - 10, 480);
       ctx.closePath();
       ctx.stroke();
     };
 
     R2leg(50, 50);
+    R2leg(500, 50);
   </script>
 </body>
 
