Added further comments

--- a/index.html
+++ b/index.html
@@ -841,6 +841,7 @@
       ctx.lineTo(x + 92.5, trackY + 70);
       ctx.stroke();
 
+      //if statement to decide which side the leg is on
       if (legSide == "L") {
         ctx.beginPath();
         ctx.rect(x + 80, y + 20, 15, 50);
